# superbook-pdf

./: .gitignore  CLAUDE.md  README.ja.md  README.md  pyproject.toml
src/superbook/: __init__.py  __main__.py  cli.py  config.py  models.py  pipeline.py  upscaler.py
src/superbook/ocr/: page_number.py  yomitoku.py
src/superbook/processing/: color_adjustment.py  color_analysis.py  deskew.py  paper_color.py  resize_padding.py  text_detection.py
src/superbook/tools/: exiftool.py  imagemagick.py  pdfcpu.py  qpdf.py  runner.py
tests/: conftest.py  test_color_adjustment.py  test_color_analysis.py  test_deskew.py  test_page_number.py  test_pipeline.py  test_resize_padding.py  test_text_detection.py
