[project]
name = "superbook-pdf"
version = "0.1.0"
description = "Book PDF processor: deskew, color correction, AI upscaling, OCR"
requires-python = ">=3.10"
license = "AGPL-3.0-only"
dependencies = [
    "click>=8.1",
    "numpy>=1.24",
    "opencv-python>=4.8",
    "Pillow>=10.0",
    "pytesseract>=0.3.10",
]

# NOTE: AI upscaling (torch, realesrgan, basicsr) and OCR (yomitoku) must be
# installed separately:
#   pip install torch realesrgan basicsr
#   pip install yomitoku

[dependency-groups]
dev = ["pytest>=7.4", "pytest-asyncio>=0.21", "pytest-cov>=4.1", "ruff>=0.1"]

[project.scripts]
superbook = "superbook.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/superbook"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py310"
line-length = 120
